Have ScrollingThread use a RunLoop rather than rolling its own https://bugs.webkit.org/show_bug.cgi?id=211730

Reviewed by Darin Adler.

ScrollingThread rolled its own runloop/function dispatch by dropping to CF for macOS.
Fix to use RunLoop which provides the same functionality.

There was also a race creating the ScrollingThread for the first time, since both
the main thread, and EventDispatcher can call ScrollingThread::dispatch() early on,
so fix with a std::once block.

* SourcesCocoa.txt:
* WebCore.xcodeproj/project.pbxproj:
* page/scrolling/ScrollingThread.cpp:
(WebCore::ScrollingThread::singleton):
(WebCore::ScrollingThread::dispatch):
(WebCore::ScrollingThread::createThreadIfNeeded):
(WebCore::ScrollingThread::initializeRunLoop):
(WebCore::ScrollingThread::dispatchFunctionsFromScrollingThread): Deleted.
(WebCore::ScrollingThread::wakeUpRunLoop): Deleted.
(WebCore::ScrollingThread::threadRunLoopSourceCallback): Deleted.
* page/scrolling/ScrollingThread.h:
(WebCore::ScrollingThread::runLoop):
* page/scrolling/mac/ScrollingThreadMac.mm: Removed.


Canonical link: https://commits.webkit.org/224640@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261494 268f45cc-cd09-0410-ab3c-d52691b4dbfc